--- a/styles.css
+++ b/styles.css
@@ -10,27 +10,26 @@ body{
 }
 
 
-
 #gradient-canvas {
   width: 100%;
   height:100%;
-  background: radial-gradient(circle, rgba(175,96,0,1) 40%, rgba(143,0,0,1) 84%);
+  background: radial-gradient(circle, rgb(15, 0, 84) 40%, rgb(33, 0, 78) 84%);
   position:fixed;
   z-index: -1;
 
 }
 
-
-
 .calendar {
-    font-family: Arial;
-    width: 350px;
-    border: 1px solid #ccc;
-    padding: 0px;
-    margin: auto;
-    margin-top: 120px;
-  }
-  
+  font-family: Arial;
+  width: 350px;
+  border: 1px solid #ccc;
+  padding: 0px;
+  margin: auto;
+  margin-top: 120px;
+  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
+
+}
+
   .month {
     display: flex;
     justify-content: space-between;
@@ -41,10 +40,25 @@ body{
   .prev, .next {
     cursor: pointer;
     user-select: none;
+    color: rgb(255, 255, 255);
+  }
+
+  .prev{
+    padding-left:100px;
+    
+  }
+
+  .next{
+    margin-right:100px;
+  }
+
+  .month-name{
+    color: rgb(255, 255, 255);
   }
   
   .weekdays {
     display: flex;
+    color: rgb(255, 255, 255);
   }
   
   .weekdays div {
@@ -56,6 +70,7 @@ body{
   .days {
     display: flex;
     flex-wrap: wrap;
+    color: rgb(255, 255, 255);
   }
   
   .days div {
@@ -68,12 +83,12 @@ body{
   }
   
   .days div:hover {
-    background-color: #eee;
+    background-color: rgba(255, 255, 255, 0.256);
   }
   
   .today {
     background-color:radial-gradient(circle, rgb(87, 87, 87) 40%, rgb(160, 160, 160)84%);
-    color: white;
+    color: rgb(255, 255, 255);
   }
   
   .selected {
@@ -94,7 +109,7 @@ body{
   }
   
   .modal-content {
-    background-color: #fefefe;
+    background-color:gradient( rgb(87, 87, 87) 40%, rgb(160, 160, 160)84%);
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
@@ -122,7 +137,8 @@ body{
   .container {
     margin: 0 auto;
     max-width: 780px;
-    background-color: #ffcd77;
+    
+    background-color:rgba(97, 0, 132, 0.801);
     padding: 1rem;
     border-radius: 0.25rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -140,12 +156,14 @@ body{
     font-size: 2rem;
     text-align: center;
     font-family: SF pro;
+    color: white;
     
   }
   
   form {
     display: flex;
     margin-bottom: 1rem;
+    z-index: 5;
   }
   
   input[type="text"] {
@@ -157,13 +175,13 @@ body{
     border-radius: 0.25rem;
     padding: 0.5rem;
     font-size: 1rem;
-    background-color: #f9f9f97e;
+    background-color: #fff2df9a;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
   button {
     border: none;
-    background-color: #8d734a72;
+    background-color: #844a8d93;
     color: #fff;
     padding: 0.5rem 1rem;
     border-radius: 0.25rem;
